--- a/pages/location/location.wxml
+++ b/pages/location/location.wxml
@@ -1,14 +1,21 @@
 <!--pages/location/location.wxml-->
 <view class="">
   <view class="weui-cells__title">选择地址：</view>
-        <view class="weui-cells weui-cells_after-title">
-            <view class="weui-cell weui-cell_select">
-                <view class="weui-cell__hd" style="width: 105px">
-                    <picker bindchange="bindProvinceChange" value="{{provincesListIndex}}" range="{{provincesList}}" range-key='fullname'>
-                        <view class="weui-select">{{provincesList[provincesListIndex].fullname}}</view>
-                    </picker>
-                </view>
-            </view>
-        </view>
+  <picker-view
+    indicator-style="height: 50px;"
+    style="width: 100%; height: 300px;"
+    value="{{value}}"
+    bindchange="bindChange"
+  >
+    <picker-view-column>
+      <view wx:for="{{provinces}}" style="line-height: 50px">{{item.fullname}}</view>
+    </picker-view-column>
+    <picker-view-column>
+      <view wx:for="{{cities}}" style="line-height: 50px">{{item.fullname}}</view>
+    </picker-view-column>
+    <picker-view-column>
+      <view wx:for="{{districts}}" style="line-height: 50px">{{item.fullname}}</view>
+    </picker-view-column>
+  </picker-view>
 
 </view>
