--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -46,10 +46,12 @@
   </view>
 
 
-  <view class='products'>
-    <view wx:for="{{allGoodsList}}" wx:key="{{allGoodsList.id}}">
-      <view class='product-item'>
-        <text class='name'>{{item.goodsName}} <text class="content">{{item.agencyName}}</text></text>
+  <view class='publish'>
+    <view wx:for="{{publishList}}" wx:key="{{publishList.id}}">
+      <view class='publish-item'>
+        <text class='name'>{{item.category}}</text>
+        <text class="content">{{item.description}}</text>
+        <view wx:for="{{item.images}}"><image src='{{item}}'></image></view>
       </view>
     </view>
   </view>
