--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -9,12 +9,12 @@
   </view>
   <view class='search-result'>
     <view class='search-result-agency' wx:for="{{resultAgencyList}}" wx:key="{{item.id}}">
-      <text class='name' data-agency-id='{{item.id}}' bindtap='getAgencyInfo'>{{item.name}} | <text class="content">{{item.content}}</text></text>
+      <text class='name' data-agency-id='{{item.id}}' bindtap='getAgencyInfo'>{{item.agencyName}}</text>
       <view class="divLine1"></view>
     </view>
     <view class="divLine2"></view>
-    <view class='search-result-product' wx:for="{{resultProductList}}" wx:key="{{item.id}}">
-      <text class='name' data-product-id='{{item.id}}' bindtap='getProductInfo'>{{item.name}} | <text class="content">{{item.content}}</text></text>
+    <view class='search-result-product' wx:for="{{resultGoodsList}}" wx:key="{{item.id}}">
+      <text class='name' data-product-id='{{item.id}}' bindtap='getProductInfo'>{{item.goodsName}} | <text class="content">{{item.goodsDescription}}</text></text>
       <view class="divLine1"></view>
     </view>
   </view>
