--- a/pages/location/location.wxml
+++ b/pages/location/location.wxml
@@ -1,7 +1,7 @@
 <!--pages/location/location.wxml-->
-<view class="">
+<view>
   <view class="weui-cells__title">选择地址：</view>
-  <picker-view
+  <!-- <picker-view
     indicator-style="height: 50px;"
     style="width: 100%; height: 300px;"
     value="{{value}}"
@@ -16,6 +16,17 @@
     <picker-view-column>
       <view wx:for="{{districts}}" style="line-height: 50px">{{item.fullname}}</view>
     </picker-view-column>
-  </picker-view>
+  </picker-view> -->
+
+<view class="section">
+      <picker mode="region" bindchange="bindRegionChange" value="{{region}}">
+        <view class="selection-item">
+          当前选择：{{region[0]}} -- {{region[1]}} -- {{region[2]}}
+        </view>
+      </picker>
+    </view>
+
+
+
 
 </view>
