--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -33,6 +33,7 @@
     <view class='product-item' wx:for="{{recommends}}" wx:key="{{recommends.id}}">
       <text class='name'>{{item.goodsName}}<text class="content">{{item.agencyName}}</text></text>
     </view>
+    <view class='product-item' bindtap='getRecommends'>换一批</view>
   </view>
 
   <view class='tabs'>
@@ -52,7 +53,7 @@
         <text class='name'>{{item.category}}</text>
         <text class="content">{{item.description}}</text>
         <view class='images'>
-        <view wx:for="{{item.images}}" class='image'><image mode='scaleToFill' src='{{item}}'></image></view></view>
+        <view wx:for="{{item.images}}"><image class='image' mode='scaleToFill' src='{{item}}'></image></view></view>
       </view>
     </view>
   </view>
