--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -24,7 +24,7 @@
 
   <view>
     <view style="margin: 20rpx 0;">当前位置</view>
-    <view class="currentlocation">{{currentLocation}}晶城<view class="relo">重新定位</view></view>
+    <view class="currentlocation">{{currentLocation}}晶城<view class="relo"><image style="width: 16px; height: 16px; margin: 6px 6px 0 0; float: left;"  src="{{imageLoad}}"></image>重新定位</view></view>
   </view>
   <view>
     <view style="margin: 20rpx 0;">搜索地址</view>
