--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -14,12 +14,12 @@
           <textarea name="description" style="display: {{textareadisplay}};" placeholder='请描述信息内容'></textarea>
         </view>
         <view class='form-item'>
-        <view wx:for="{{tempFilePaths}}"wx:key="{{index}}">
-           <image style="width: 100px; height: 100px; background-color: #eeeeee;" src='{{item}}' data-id='{{index}}' bindlongtap='deleteImg'></image>
-          </view>
-          <text class='label' style='position:static;'>上传图片<text>*</text></text> 
-          <view style="width: 100px; height: 100px; background-color: #eeeeee; margin: 10px 0;" bindtap='chooseImage'>
-            <image style="width: 100px; height: 100px; background-color: #eeeeee;"  src="{{imagePath}}"></image>
+          <view wx:for="{{tempFilePaths}}"wx:key="{{index}}" style="width:160rpx; float:left; margin: 20px 1%;">
+             <image style="width: 160rpx; height: 160rpx; background-color: #eeeeee;" src='{{item}}' data-id='{{index}}' bindlongtap='deleteImg'></image>
+            </view>
+            <text class='label' style='position:static;'>上传图片<text>*</text></text> 
+            <view style="width: 100px; height: 100px; background-color: #eeeeee; margin: 10px 0;" bindtap='chooseImage'>
+              <image style="width: 100px; height: 100px; background-color: #eeeeee;"  src="{{imagePath}}"></image>
           </view>
         </view>
         <view class='form-item'>
