kongz  首页修复小bug

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -38,11 +38,11 @@
 
   <view class='tabs'>
     <view class='tab-view'>
-      <view class='tab-item {{currentTab == -2?"active":""}}' bindtap='tapNearBy'>附近</view>
-      <view class='tab-item {{currentTab == -1?"active":""}}' bindtap='tap2p'>二批</view>
+      <view class='tab-item {{currentTab == -2?"active":""}}' data-tab-id='-2' bindtap='tapTab'>附近</view>
+      <view class='tab-item {{currentTab == -1?"active":""}}' data-tab-id='-1' bindtap='tapTab'>二批</view>
     </view>
     <scroll-view scroll-x class='tabs-scroll-view'>
-        <view wx:for="{{tabs}}" data-tab-id='{{item.value}}' data-index='{{index}}' class='tab-item {{currentTab == index?"active":""}}' bindtap='tapTab'>{{item.chinese}}</view>
+        <view wx:for="{{tabs}}" data-tab-id='{{item.value}}' class='tab-item {{currentTab == item.value?"active":""}}' bindtap='tapTab'>{{item.chinese}}</view>
     </scroll-view>
   </view>
 
