--- a/pages/publishDetail/publishDetail.wxss
+++ b/pages/publishDetail/publishDetail.wxss
@@ -1,1 +1,16 @@
-/* pages/publishDetail/publishDetail.wxss */
+.itemimage{
+	float: left;
+	width: 100rpx;
+	height: 100rpx;
+	border-radius: 100rpx;
+	margin: 0 10px 0 0;
+	box-shadow: 0 0 3px #dedede;
+}
+
+.phone{
+	width:36px;
+	height: 36px;
+	position: absolute;
+	top:17px;
+	right: 10px;
+}
