--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,9 +2,9 @@
 <view class="container_index">
   <view class='exceptProduct'>
     <view class='header'>
-      <view class="location">
+      <view class="location" bindtap='{{isCooperation==true?"changeLocation":""}}'>
         <text class='location-text'>{{currentArea}}</text>
-        <image class='location-pull' hidden='{{!isCooperation}}' mode='widthFix' src='../../images/pull.png' bindtap="changeLocation" />
+        <image class='location-pull' mode='widthFix' src='../../images/pull.png'/>
       </view>
       <view class='search'>
         <icon class="searchcion" size='35rpx' type='search'></icon>
