--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,20 @@
-<!--index.wxml-->
+<view wx:if="{{isNotAuthorized}}">
+  <view wx:if="{{canIUse}}">
+    <view class='header'>
+      <image src='/images/add.png'></image>
+    </view>
+
+    <view class='content'>
+      <view>申请获取以下权限</view>
+      <text>获得你的公开信息(昵称，头像等)</text>
+    </view>
+
+    <button class='bottom' type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
+      授权登录
+    </button>
+  </view>
+  <view wx:else>请升级微信版本</view>
+</view>
 <view class="container_index">
   <view class='exceptProduct'>
     <view class='header'>
