--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,7 +27,7 @@
         <input class='searchInput' placeholder=' 请输入关键字' placeholder-class='searchInputText' bindfocus='navigateToSearchPage'></input>
       </view>
     </view>
-    <view style='display:flex;justify-content: center;'>
+    <view style='display:flex;justify-content: center; margin: 15px 0;'>
       <view class='swiper-view'>
         <swiper class='u-wrp-bnr' autoplay='true' interval='5000' duration='1000' circular='true'>
           <block wx:for="{{ads}}" wx:for-index="index" wx:key="index">
@@ -44,13 +44,14 @@
     <view class='flexRowSon'>合伙人</view>
     <view class='flexRowSon'>厂家招商信息</view>
   </view>
-  <view style='display:flex;justify-content:center;font-size: 30rpx;'>推荐产品</view>
+  <view style='display:flex;justify-content:center;font-size: 36rpx; margin: 30rpx 0;'>推荐产品</view>
   <view class='products'>
-    <view class='product-item' wx:for="{{recommends}}" wx:key="{{recommends.id}}">
-      <text class='name'>{{item.goodsName}}<text class="content">{{item.agencyName}}</text></text>
+    <view class='product-item' wx:for="{{recommends}}" wx:key="{{recommends.id}}">   
       <image class='image' src='{{item.goodsPic[0]}}'></image>
+      <view class='name'>{{item.goodsName}}</view>
+      <view class="content"> {{item.agencyName}}</view>
     </view>
-    <view class='product-item' bindtap='getRecommends'>换一批</view>
+    <view class='reflesh' bindtap='getRecommends'>换一批</view>
   </view>
 
   <view class='tabs'>
@@ -64,20 +65,18 @@
   </view>
 
 
-  <view wx:if="{{tabType==1}}" class='agencylist'>
-    <view wx:for="{{agencyList}}" wx:key="{{agencyList.id}}">
-      <view class='content-item'>
+  <view wx:if="{{tabType==1}}" style="background: #fff;">
+    <view class='agencylist' wx:for="{{agencyList}}" wx:key="{{agencyList.id}}">
         <image class="itemimage" src='{{item.logoImagePath}}'></image>
         <image class="phone" src='../../images/phone.jpg'></image>
-        <text>{{item.distance}}</text>
         <text class="name">{{item.agencyName}}</text>
-        <text class="address">{{item.address}}</text>
-      </view>
+        <text class="address">{{item.address}}<text style="margin-left: 10px; color:#d05857;">{{item.distance}}</text></text>
     </view>
   </view>
 
-  <view wx:if="{{tabType==2}}" class='content'>
-    <view wx:for="{{publishList}}" wx:key="{{publishList.id}}">
+
+  <view wx:if="{{tabType==2}}" style="background: #fff;">
+    <view class='content' wx:for="{{publishList}}" wx:key="{{publishList.id}}">
       <view class='content-item'>
         <text class='name'>{{item.category}}</text>
         <text class="content">{{item.description}}</text>
