--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -8,11 +8,12 @@
 }
 
 .header {
-  background-color: red;
+  background-color: #0097fe;
   height: 100rpx;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 -40rpx;
 }
 
 
@@ -44,8 +45,7 @@
 }
 
 .search-result {
-  width: 90%;
-  background-color: lightyellow;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -59,13 +59,11 @@
 }
 
 .divLine1{
- background: red;
  width: 100%;
  height: 3rpx;
 }
 
 .divLine2{
- background: red;
  width: 100%;
  height: 8rpx;
 }
